Prefer using camel.surefire.* properties where possible, remove superfluous surefire configuration, e.g. it is default or inherited anyway